Fix distorted page width

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   line-height: 1.8em;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: "Playfair Display", serif;
 }
 
@@ -106,6 +106,10 @@ ul, ol {
   font-size: 11px;
   line-height: 18px;
   color: gray;
+}
+
+img {
+  max-width: 100%;
 }
 
 blockquote {
